<resources>
    <string name="app_name">Hotels</string>
    <string name="title_activity_hotels_maps">Map</string>
    <string name="menu_item_maps">Maps</string>
    <string name="header_title_map">Hotels in map</string>
    <string name="hint_name">Name</string>
    <string name="hint_city">Ville</string>
    <string name="hint_rank">Classe</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_address">Address</string>
    <string name="btn_ajouter">Ajouter</string>
    <string name="about_menu_item">About</string>
    <string name="hint_lat">Latitude</string>
    <string name="hint_lon">Longitude</string>
</resources>
